# CertiGC

./: .gitignore  CONFIGURE  LICENSE  Makefile  README.md  _CoqProject  coq-certigc-32.opam  coq-certigc.opam  coq-vsu-gc-src.opam  coq-vsu-gc-vst-32.opam  coq-vsu-gc-vst.opam  coq-vsu-gc.opam
.github/workflows/: build.yml
src/ast/: env_graph_gc.v
src/ast-gen/x86_32-linux/: gc.v
src/ast-gen/x86_64-linux/: gc.v
src/ast/x86_32-linux/: gc.v
src/c/: gc.c
src/c/include/coq-vsu-gc/: certicoq_gc.h  gc.h
src/c/include/coq-vsu-gc/src/: certicoq_gc.c  gc.c
src/model/: GCGraph.v  compatible.v  constants.v  copy.v  cut.v  do_generation.v  forward.v  garbage_collect.v  gc_correct.v  graph.v  heap.v  reset.v  scan.v  spatial_gcgraph.v  thread_info.v  update.v  util.v
src/proof/: verif_Is_block.v  verif_Is_from.v  verif_conversion.v  verif_create_heap.v  verif_create_space.v  verif_do_generation.v  verif_do_scan.v  verif_forward.v  verif_forward_roots.v  verif_garbage_collect.v  verif_make_tinfo.v  verif_resume.v
src/spec/: gc_spec.v
theories/CertiGC/c/ast/: env_graph_gc.v
theories/CertiGC/c/clightgen/x86_32-linux/: gc.v
theories/CertiGC/c/clightgen/x86_64-linux/: gc.v
theories/CertiGC/c/proof/: verif_Is_block.v  verif_conversion.v  verif_create_heap.v  verif_create_space.v  verif_do_generation.v  verif_do_scan.v  verif_forward.v  verif_forward_roots.v  verif_garbage_collect.v  verif_make_tinfo.v  verif_resume.v
theories/CertiGC/c/spec/: gc_spec.v
theories/CertiGC/model/: GCGraph.v  compatible.v  constants.v  copy.v  cut.v  do_generation.v  forward.v  garbage_collect.v  gc_correct.v  graph.v  heap.v  reset.v  scan.v  spatial_gcgraph.v  thread_info.v  update.v  util.v
theories/CertiGC/model/compatible/: compatible.v
theories/CertiGC/model/heap/: heap.v
theories/CertiGC/model/heapgraph/: backward_edge.v  can_copy.v  field_pairs.v  graph.v  has_block.v  has_field.v  mark.v  more.v  predicates.v  roots.v
theories/CertiGC/model/heapgraph/block/: block.v  block_rep.v  cell.v  field.v  header.v  ptr.v
theories/CertiGC/model/heapgraph/generation/: empty.v  generation.v
theories/CertiGC/model/heapgraph/remset/: remset.v
theories/CertiGC/model/op/: copy.v  cut.v  do_generation.v  forward.v  garbage_collect.v  reset.v  scan.v  update.v
theories/CertiGC/model/thread_info/: thread_info.v
theories/CertiGC/vst/ast/: env_graph_gc.v
theories/CertiGC/vst/clightgen/x86_32-linux/: certicoq_gc.v  gc.v
theories/CertiGC/vst/clightgen/x86_64-linux/: certicoq_gc.v  gc.v
theories/CertiGC/vst/cmodel/: spatial_gcgraph.v
theories/CertiGC/vst/model/: c_constants.v  spatial_gcgraph.v
theories/CertiGC/vst/proof/: verif_Is_block.v  verif_conversion.v  verif_create_heap.v  verif_create_space.v  verif_do_generation.v  verif_do_scan.v  verif_forward.v  verif_forward_roots.v  verif_garbage_collect.v  verif_make_tinfo.v  verif_resume.v
theories/CertiGC/vst/spec/: gc_spec.v
theories/CertiGC/vst/verif/: verif_create_heap.v  verif_create_space.v  verif_do_generation.v  verif_do_scan.v  verif_forward.v  verif_forward_roots.v  verif_make_tinfo.v  verif_resume.v
