opam-version: "2.0"
name: "CertiGC"
version: "1.0"
maintainer: "CertiGC team"
homepage: "https://github.com/intoverflow/CertiGC"
dev-repo: "git+https://github.com/intoverflow/CertiGC.git"
bug-reports: "https://github.com/intoverflow/CertiGC/issues"
license: "https://github.com/intoverflow/CertiGC/blob/live/LICENSE"
authors: ["CertiGC team"]
build: [
    [make "deepclean"]
    [make "BITSIZE=64" "J=%{jobs}%"]
]
install: [
    make "BITSIZE=64" "install"
]
depends: [
    "coq" {>= "8.13.2"}
    # "coq-certigraph" {>= "1.0.0"}
    "coq-compcert" {>= "3.9"}
    "coq-vst" {>= "2.8"}
]
synopsis: "A formally verified garbage collector, implemented in C and proven in Coq"
description: """CertiGC

A formally verified garbage collector, implemented in C and proven in Coq.
"""