opam-version: "2.0"
name: "CertiGC"
version: "1.0"
maintainer: "The CertiGraph Team"
homepage: "https://github.com/CertiGraph/CertiGC"
dev-repo: "git+https://github.com/CertiGraph/CertiGC.git"
bug-reports: "https://github.com/CertiGraph/CertiGC/issues"
license: "https://github.com/CertiGraph/CertiGC/blob/live/LICENSE"
authors: ["The CertiGraph Team"]
build: []
install: [
    make "install-src"
]
depends: [
    "coq-vsu"
]
synopsis: "A formally verified garbage collector, implemented in C and proven in Coq"
description: """CertiGC

A formally verified garbage collector, implemented in C and proven in Coq.
"""